Fix overflow issues in header

--- a/styles.css
+++ b/styles.css
@@ -85,16 +85,19 @@ a {
   width: 100vw;
 }
 .left {
+  display: flex;
+  height: inherit;
   max-height: 100%;
-  min-width: 33%;
+  max-width: 33%;
   padding: 25px;
 }
 .logo-link {
-  height: 150px;
-} 
-.logo img {
-  padding: 25px;
+  height: 100%;
+  display: block;
   width: 100%;
+} 
+.left img.logo {
+  height: 100%;
   object-fit: cover;
 }
 .center {
@@ -119,7 +122,7 @@ nav {
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   list-style: none;
   letter-spacing: 1.9px;
@@ -132,7 +135,7 @@ nav {
   height: fit-content;
 }
 .nav-links li a {
-  padding: 19px 18px;
+  /* padding: 19px 18px; */
   display: inline-block;
 }
 .nav-links a:hover{
@@ -181,7 +184,7 @@ nav {
 
 .right {
   height: 100%;
-  min-width: 33%;
+  width: 33%;
   border-left: 1px solid black;
   letter-spacing: 0.1rem;
 }
@@ -210,12 +213,13 @@ nav {
   font-size: 0.6rem;
 }
 .questions {
+  text-align: center;
   font-size: 0.9rem;
   letter-spacing: 0.1rem;
 }
 .hero {
   border-top: 1px solid black;
-  height: 280px;
+  height: auto;
   display: flex;
 }
 .hero-left {
@@ -226,7 +230,6 @@ nav {
   width: 50%;
   background-color: var(--dark-blurple);
   padding: 40px;
-  margin-bottom: 5px;
   align-items: flex-start;
 }
 .hero-left p{
@@ -260,14 +263,13 @@ nav {
 }
 .hero-right {
   width: 50%;
-  height: 100%;
   overflow: hidden;
-  align-self: flex-end;
 }
 
 .hero-right img {
   max-width: 100%;
   object-fit: cover;
+  object-position: left;
   width: 100%;
   height: 100%;
   object-position: 50% 75%;
